  * Fail if no running as root
  * Update translations
  * Add TCOS_NETBOOT_HIDE_LOCAL to boot menu options
  * shared.py TcosGui.py ConfigReader.py
    - Fix changedvars creation (only do in loadsettings)
    - Fix netboot menu vars save
  * Update translations

  [ Ignacio Vidal ]
  * ConfigReader.py
    - Add support in case group tcos exist
  * TcosGui.py tcosconfig.glade
    - Add TCOS_XORG_DRI, TCOS_XORG_DRI_RADEON and TCOS_XORG_DRIVER_OPENCHROME
    - In case blank password, that is set to root, send a message to know

 -- Ignacio Vidal <vidal_joshur@gva.es>  Wed, 07 May 2008 21:44:17 +0200

tcosconfig (0.3~rc3) unstable; urgency=low

  * ConfigReader.py TcosGui.py:
    - Remove from changeddata TCOS_NETBOOT_MENUS if no changed
  * Write TCOS_BASED_TEMPLATE in tcosconfig.conf

 -- Mario Izquierdo (mariodebian) <mariodebian@gmail.com>  Tue, 15 Apr 2008 13:23:21 +0200

tcosconfig (0.3~rc2) unstable; urgency=low

  * New release uploaded to experimental

 -- Mario Izquierdo (mariodebian) <mariodebian@gmail.com>  Tue, 15 Apr 2008 11:15:56 +0200

tcosconfig (0.3~rc1) unstable; urgency=low

  * NOT RELEASE
  * New design, more small
  * Add template (tcos.conf) system
  * Rewrite ConfigReader.py using a dictionary for data
  * Save data in /etc/tcos/template (don't edit tcos.conf)
  * Fix GUI freeze when exec gentcos
  * ConfigReader.py
    - Add old config before new in tcosconfig.conf save
  * ConfigReader.py:
    - Add setup_chroot function to copy config files from / to chroot
  * shared.py TcosGui.py tcosconig.glade
    - Add new GUI configurations (TCOS_BOOT_MENU, auth expander, etc...)
  * Add more expanders (kernel, thinclients, other)
  * Update translations
  * ConfigReader.py:
    - Fix tcosconfig.conf BASED_TEMPLATE
  * TcosGui.py shared.py:
    - Add linked_widgets (enable/disable others by widget value)
  * TcosChrootBuilder.py
    - Update Debian unstable and Ubuntu hardy kernels
  * Add icon to window
  * Update translations
